<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Banking Card Reader</string>
    <string name="activity_name">Banking Card Reader</string>
    
    <!-- Msg -->
    <string name="billing_success">Thanks for your donation!</string>
    <string name="card_read">Card read</string>
    <string name="card_reading">Reading in progress&#8230;</string>
    <string name="card_deleted">Card data deleted</string>
    <string name="card_reading_desc">Please do not remove or move card during reading.</string>
    <string name="nfc_locked">NFC is locked on your card</string>
    <string name="msg_nfc_not_available">This device doesn\'t have NFC which is required to run this application.</string>
    <string name="msg_nfc_not_enabled">Please enable NFC and press back to return to this application.</string>
    <string name="msg_ok">OK</string>
    <string name="msg_info">Info</string>
    <string name="donate_banner">Help us to improve this app, donate !</string>
    
    <!-- Error -->
    <string name="error_communication_nfc">Please do not move card, try again !</string>
    <string name="error_card_unknown">Unknown EMV card (Please send logs)</string>
    <string name="error_link">No web browser found</string>
    <string name="error_email">No email client found</string>
    
    <!-- Tabs -->
    <string name="viewpager_carddetail">Card detail</string>
    <string name="viewpager_transactions">Transactions</string>
    <string name="viewpager_log">Log</string>
    
    <!-- Card Detail -->
    <string name="paycard_back_text">Tap your NFC paycard \n to the back of your phone</string>
    <string name="extended_card_detail_title">Extended card details</string>
    <string name="card_representation_title">Card Representation</string>
    
    <string name="extended_title_AID">Card AID :</string>
    <string name="extended_title_application_label">Application :</string>
    <string name="extended_title_pin_try">Pin try left :</string>
    <string name="extended_title_card_type">Card type :</string>
    <string name="extended_card_holder_name">Holder name :</string>
    <string name="extended_title_possible_bank">Card issuer :\n(possible)</string>
    <string name="extended_title_times">Time(s)</string>
    
    <!-- Transaction -->
    <string name="transaction_empty">Your card doesn\'t provided\ntransaction history</string>
    
    <!-- Transaction detail -->
    <string name="transaction_type">Transaction type :</string>
    <string name="transaction_cryptogram">Cryptogram :</string>
    <string name="transaction_country">Terminal Country :</string>

  <!-- Transaction type -->

  <!-- Logs -->
    <string name="mail_subject">[EMV Reader] Log report</string>
    <string name="mail_popup_title">Send log by mail...</string>
    <string name="mail_to">android@julien-millau.fr</string>
    
    
    <!-- About -->
    <string name="about_app_detail">This app was made to read public data on banking NFC cards compliants with EMV norm.</string>
    <string name="about_source_detail">Source Code and documentation available on <a href="https://github.com/devnied/EMV-NFC-Paycard-Enrollment">Github</a>. Application written by <a href="http://julien-millau.fr">Julien Millau</a></string>
    <string name="about_inapp_text">Help us to improve this app with donation</string>
    <string name="about_title">About</string>
    <string name="about_inApp">Donate</string>
    
    <!-- Navigation drawable -->
    <string name="navigation_menu_open">Navigation menu open</string>
    <string name="navigation_menu_close">Navigation menu close</string>
    <string-array name="navigation_items">
        <item>Cards details</item>
        <item>Configuration</item>
        <item>About</item>
    </string-array>
    
    <!-- Preferences -->
    <string name="general_category">General Preferences</string>
  <string name="pref_remove_all_stored_cards">Remove stored data</string>
    
        <!--  Strings for possible PreferenceActivity Back/Next buttons -->
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>

    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">Skip</string>

    <string name="card_bank">Bank</string>
    <string name="card_expire">Expire</string>
    <string name="card_view_description">Bank card illustration</string>
    <string name="card_type_description">Card type logo</string>
    <string name="card_contactless_description">Contactless logo</string>
    <string name="detail_key">key :</string>
    <string name="detail_value">value</string>

    <string name="about_description_logo">App logo</string>
    <string name="about_description_github">Github logo</string>

</resources>
