<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardui"
            android:gravity="center_horizontal"
            android:orientation="vertical"
             >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/about_title"
                android:textColor="#999"
                android:textSize="14sp"
                android:textStyle="bold" />
            
            
            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_launcher"
                android:contentDescription="@string/about_description_logo"
                />
            
            <TextView
                android:id="@+id/about_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app_detail"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/github"
                android:contentDescription="@string/about_description_github"
                />

            
            <TextView
                android:id="@+id/about_github_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_source_detail"
                android:layout_marginBottom="10dp"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/cardui"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/about_inApp"
                android:textColor="#999"
                android:textSize="14sp"
                android:textStyle="bold" />
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_inapp_text"
                android:layout_marginBottom="10dp"
                android:textSize="15sp" />
            
            <FrameLayout
	            android:id="@+id/about_inapp_content"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" 
	            android:visibility="gone"
	            />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
