<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="5dp" >

    <ImageView
        android:id="@+id/card"
        android:layout_width="280dp"
        android:layout_height="160dp"
        android:background="@drawable/card_border"
        android:gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/emv_card_background"
        android:contentDescription="@string/card_view_description"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/card"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/card_bank"
        android:textColor="#999999"
        android:textScaleX="1"
        android:textSize="25sp"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:id="@+id/cardNumber"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/card"
        android:layout_marginTop="77dp"
        android:gravity="center"
        android:text="3456 5456 6578 6543"
        android:textColor="@android:color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText"
        >
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cardNumber"
        android:layout_marginLeft="95dp"
        android:layout_marginRight="95dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:gravity="start|center_vertical"
            android:text="@string/card_expire"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/cardValidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:text="12/14"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText"
            >
        </TextView>
    </LinearLayout>

    <ImageView
        android:id="@+id/type"
        android:layout_width="70dp"
        android:layout_height="34dp"
        android:layout_alignBottom="@+id/card"
        android:layout_alignRight="@+id/card"
        android:layout_alignEnd="@+id/card"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/card_type_description"
        />

</RelativeLayout>
