<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/card_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f5f5"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/cardui"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/card_representation_title"
                    android:textColor="#999"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <include layout="@layout/card_representation" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/cardui"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/extended_card_detail_title"
                    android:textColor="#999"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TableLayout
                    android:id="@+id/extended_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="7dp"
                    android:shrinkColumns="1"
                     >
 
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="140dp"
            android:scaleType="fitCenter"
            android:src="@drawable/contactless"
            android:contentDescription="@string/card_contactless_description"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/paycard_back_text"
            android:textSize="17sp"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>

</LinearLayout>
