<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cardui_no_radius_top"
        android:paddingBottom="7dp"
        android:shrinkColumns="1" >

        <TableRow
            android:id="@+id/row_transaction_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_type"
                android:textColor="#222"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/transaction_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="7dp"
                android:textColor="#222"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded,RtlSymmetry"
                />
        </TableRow>
        

        <TableRow
            android:id="@+id/row_transaction_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_country"
                android:textColor="#222"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/transaction_county"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="7dp"
                android:textColor="#222"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded,RtlSymmetry"
                />
        </TableRow>

        <TableRow
            android:id="@+id/row_transaction_crypto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_cryptogram"
                android:textColor="#222"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/transaction_cryptogram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="7dp"
                android:textColor="#222"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded,RtlSymmetry"
                />
        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/transaction_group_divider"
        android:layout_width="match_parent"
        android:layout_height="13dp" />

</LinearLayout>
